# $Id$

EXTRA_DIST = core/exmpp.erl						\
	     core/exmpp_sup.erl						\
	     core/exmpp_internals.erl					\
	     core/exmpp_xml.erl						\
	     core/exmpp_xmlstream.erl					\
	     core/exmpp_stringprep.erl					\
	     core/exmpp_jid.erl						\
	     core/exmpp_jlib.erl					\
	     core/exmpp_stream.erl					\
	     client/exmpp_client_stream.erl				\
	     client/exmpp_client_tls.erl				\
	     client/exmpp_client_compression.erl			\
	     client/exmpp_client_sasl.erl				\
	     client/exmpp_client_legacy_auth.erl			\
	     client/exmpp_client_pubsub.erl				\
	     server/exmpp_server_stream.erl				\
	     server/exmpp_server_tls.erl				\
	     server/exmpp_server_compression.erl			\
	     server/exmpp_server_sasl.erl				\
	     server/exmpp_server_legacy_auth.erl			\
	     compat/ejabberd_zlib.erl					\
	     compat/iconv.erl						\
	     compat/jlib.erl						\
	     compat/sha.erl						\
	     compat/stringprep.erl					\
	     compat/tls.erl						\
	     compat/xml.erl

all-local:
	$(ERL) -make
